# SPPAS

./: .gitignore  README.md  dashboard.bat  pyproject.toml  setup.bat  setup.command  sppas.bat  sppas.command
demo/: demo-activity.xra  demo-anonym.TextGrid  demo-coords.xra  demo-cuedsp.xra  demo-cuedspid001.xra  demo-face.xra  demo-hands.xra  demo-ident.xra  demo-identid001.xra  demo-intsint.PitchTier  demo-intsint.xra  demo-iva.xra  demo-momel.PitchTier  demo-momel.xra  demo-palign.xra  demo-pclass.xra  demo-phon.xra  demo-rms.xra  demo-sights.xra  demo-sightsid001.xra  demo-stops.xra  demo-syll.xra  demo-tga.xra  demo-token.xra  demo.PitchTier  demo.TextGrid
help/: README.txt
help/scripting_solutions/: ex02_functions.py  ex03_functions.py  ex04_reading_simple.py  ex05_reading_file.py  ex06_list.py  ex07_dict.py  ex08_counter.py  ex10_read_write.py  ex11_transcription.py  ex12_tiers_info.py  ex13_annotations_info.py  ex15_annotations_label_filter.py  ex16_annotations_dur_filter.py  ex17_annotations_relation_filter1.py  ex17_annotations_relation_filter2.py  ex17_annotations_relation_filter3.py  skeleton-sppas.py  skeleton.py
resources/: AUTHORS_LICENCES.txt  README.txt
resources/cuedspeech/: cueConfig-eng.txt  cueConfig-fra.txt  fidelia_2-hands.xra
resources/dict/: AUTHORS.txt  eng-fra.map
resources/models/models-eng/: hmmdefs  macros  monophones  monophones.repl
resources/models/models-fra/: AUTHORS.txt  hmmdefs  macros  monophones  monophones.repl
resources/models/models-frq/: AUTHORS.txt
resources/repl/: fra.repl
resources/samples/: README.txt
resources/samples/samples-eng/: oriana1.txt
resources/samples/samples-fra/: AC track_0379-token.xra  AG_éàç_0460-token.xra  BX_track_0451-token.xra  EB_track_0641-token.xra  F_F_B003_P8-token.xra  F_F_B003_P8.TextGrid  F_F_B003_P9-token.xra  F_F_C006_P6-token.xra  IM_track_0767-token.xra  MB_track_0674-token.xra  MG_track_0702-token.xra  ML_track_0597-token.xra  NH_track_636-token.xra  SR_track_631-token.xra  YM_track_0182-token.xra
resources/vocab/: COPYRIGHT.txt  Punctuations.txt  fra.vocab
sppas/: AUTHORS.md  CITATION.cff  CODE_STYLE_GUIDE.md  README.md  __init__.py  __main__.py  codemeta.json
sppas/core/: __init__.py
sppas/core/config/: __init__.py  appcfg.py  logsetup.py  process.py  settings.py  sppaslang.py  support.py
sppas/core/coreutils/: __init__.py  exceptions.py  iso639.py  makeunicode.py  messages.py  progress.py  reports.py  trash.py
sppas/core/preinstall/: __init__.py  depsinstall.py  feature.py  featurecheck.py  features.py  installer.py
sppas/etc/: activity.json  alignment.json  anonym.json  facedetect.json  faceidentity.json  facesights.json  features.ini  fillipus.json  formants.json  handpose.json  iva.json  julius-fa.conf  lexmetric.json  lexrep.json  overlaps.json  rms.json  searchipus.json  selfrepet.json  speechseg.json  speechtotext.json  sppasui.json  stopwords.json  syllabify.json  textnorm.json  tips.txt
sppas/etc/xml/: XRAv1.0.xsd  XRAv1.5.xsd  sample-1.4.xra  sample-1.5.xra
sppas/plugins/: README.txt
sppas/plugins/audioseg-3.1/: README.txt  audioseg.json  audioseg.py
sppas/plugins/classphones-2.4/: README.txt  phonemes.csv  phonemesmapping.py  phonesmaps.json
sppas/scripts/: acmmerge.py  acmsplit.py  acmtrain.py  annlang.py  answer_time.py  audiopassfilter.py  audiotoaster.py  channelclipping.py  channelsmixer.py  channelsmixersimulator.py  density.py  dictcheck.py  dictmerge.py  dictsampa.py  dictselect.py  evalipus.py  evalsegmentation.py  formants.py  img_tag_sights.py  img_to_cartoon.py  img_to_vid.py  mlf2labs.py  saplay.py  slmtrain.py  sppasseg.py  tieradjustbounds.py  tieraligntophon.py  tierfiller.py  tierinfo.py  tierphntokalign.py  trs_to_table.py  trsbehavior.py  trscut.py  trsinfo.py  trsshift.py  vid_to_img.py
sppas/src/: __init__.py  src.yuml
sppas/src/analysis/: __init__.py  tierfilters.py  tierstats.py
sppas/src/anndata/: __init__.py  anndata.yuml  anndataexc.py  ctrlvocab.py  hierarchy.py  media.py  metadata.py  tier.py  transcription.py
sppas/src/annotations/: __init__.py  annotationsexc.py  autils.py  baseannot.py  diagnosis.py  imports.py  infotier.py  manager.py  param.py  report.py  searchtier.py  windowing.py
sppas/src/calculus/: __init__.py  calculusexc.py
sppas/src/imgdata/: __init__.py  coordinates.py  image.py  images.py  imageutils.py  imgcoordswriter.py  imgdata.yuml  imgdataexc.py  imgsightsreader.py  imgsimilarity.py  objdetec.py  sights.py
sppas/src/plugins/: __init__.py  manager.py  plugin.py  pluginsexc.py
sppas/src/resources/: __init__.py  dictpron.py  dictrepl.py  dumpfile.py  hand.py  mapping.py  patterns.py  resourcesexc.py  unigram.py  vocab.py  wordstrain.py
sppas/src/structs/: __init__.py  basecompare.py  basefilters.py  basefset.py  baseoption.py  dag.py  lang.py  metainfo.py  structsexc.py  tips.py
sppas/src/utils/: __init__.py  compare.py  datatype.py  fileutils.py  utilsexc.py
sppas/src/videodata/: __init__.py  coordsbuffer.py  sightsbuffer.py  video.py  videobuffer.py  videodata.yuml  videodataexc.py  videoutils.py
sppas/src/wkps/: __init__.py  appwkpm.py  filebase.py  filedatacompare.py  filedatafilters.py  fileref.py  filestructure.py  sppasWkps.py  wkpexc.py  wkps.yuml  workspace.py
sppas/tests/: test_launcher.py
sppas/tests/analysis/: test_filters.py  test_statistics.py
sppas/tests/anndata/: test_aio_annotationpro.py  test_aio_audacity.py  test_aio_elan.py  test_aio_htk.py  test_aio_phonedit.py  (+20 more)
sppas/ui/: __init__.py  filesext.py
workspaces/: Demo.wjson  samples.wjson
(+729 files in other folders)
